--- a/reportar.html
+++ b/reportar.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Reportar</title>
+  <title>Reportes</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,15 +13,15 @@
 <body>
   <nav class="light-blue darken-2" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="index.html" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Reportar</a></li>
-        <li><a href="#">Personas encontradas</a></li>
+         <li><a href="reportar.html">Crear reporte</a></li>
+        <li><a href="listado.html">Reportes</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Reportar</a></li>
-        <li><a href="#">Perdsonas encontradas</a></li>
+        < <li><a href="reportar.html">Crear reporte</a></li>
+        <li><a href="listado.html">Reportes</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -159,49 +159,28 @@
     </div>
   </div>
 
-
-  <footer class="page-footer teal">
+<footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+        <div class="col l12 s12">
+          <h5 class="white-text">Encuentrame</h5>
+          <p class="grey-text text-lighten-4">Buscamos facilitar la creacion de alertas de desaparición forzada asi como mostrar informacion de personas extraviadas para ayudar a su pronta loczalización.</p>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Encuentrame
       </div>
     </div>
   </footer>
 
 
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
+  <script src="js/firebase.js"></script>
   <script src="js/init.js"></script>
 
-</body>
+  </body>
 </html>
