--- a/reportar.html
+++ b/reportar.html
@@ -39,8 +39,8 @@
           <div class="input-field col s4">
             <select name="sexo" id="sexo">
               <option value="" disabled selected>Sexo</option>
-              <option value="masculino">Masculino</option>
-              <option value="femenino">Femenino</option>
+              <option value="masculino">Hombre</option>
+              <option value="femenino">Mujer</option>
             </select>
           </div>
           <div class="input-field col s4">
@@ -154,7 +154,7 @@
             <label for="correo">Correo de quién reporta</label>
           </div>
         </div>
-       
+
         <div class="row">
           <a hrer="javascript:void(0);" class="btn waves-effect waves-light" onCLick="dataParser()">Enviar
             <i class="material-icons right">send</i>
@@ -208,7 +208,7 @@
         selectMonths: true, // Creates a dropdown to control month
         selectYears: 15 // Creates a dropdown of 15 years to control year
       });
-      
+
 </script>
 
   </body>
