-logo -links -atyles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="light-blue darken-2 " role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="index.html" class="brand-logo">
-        <img src="assets/logdo.png" alt="">
+        <img src="assets/logo.png" alt="">
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="reportar.html">Crear reporte</a></li>
@@ -33,12 +33,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center text-white sombra">Ayudalos a regresar a casa</h1>
+        <h1 class="header center text-white sombra">Ayúdalos a regresar a casa</h1>
         <div class="row center">
-          <h5 class="header col s12 text-white sombra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium fuga, </h5>
-        </div>
-        <div class="row center">
-          <a href= "reportar.html" id="download-button" class="btn-large waves-effect waves-light">Reportar</a>
+          <a href= "reportar.html" id="download-button" class="btn-large waves-effect waves-light">Crear reporte</a>
         </div>
         <br><br>
 
@@ -55,8 +52,8 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"><i class="material-icons">report</i></h2>
-            <h5 class="center">Emite una alerta</h5>
+            <h2 class="center"><i class="material-icons">find_in_page</i></h2>
+            <h5 class="center">Sube tu reporte</h5>
             <p class="light center">Ingresa la información de tu ser querido para crear un reporte y emitir una alerta</p>
           </div>
         </div>
@@ -72,10 +69,10 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center center"></h5>
+            <h2 class="center brown-text"><i class="material-icons">report</i></h2>
+            <h5 class="center center">Emite una alerta</h5>
 
-            <p class="light center">.</p>
+            <p class="light center">Ante una situacion de emergencia emite una alerta para que quede evidencia de tu paradero.</p>
           </div>
         </div>
       </div>
@@ -88,7 +85,10 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light"> </h5>
+          <h2 class="header col s12 sombra">Las primeras horas son cruciales para encontrar a un menor</h2>
+        </div>
+        <div class="row center">
+          <a href= "reportar.html" id="download-button" class="btn-large waves-effect waves-light">Emite una alerta</a>
         </div>
       </div>
     </div>
@@ -100,9 +100,8 @@
 
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>¿Qué hacer en caso de extravio o desaparicion de personas?</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h5>¿Qué hacer en caso de extravio o desaparición de personas?</h5>
+
         </div>
       </div>
 
@@ -114,7 +113,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h3 class="header col s12 sombra-light">Si eres testigo de alguna situacion de riesgo puedes ser de mucha ayuda a la comunidad</h3>
         </div>
       </div>
     </div>
