--- a/listado.html
+++ b/listado.html
@@ -13,7 +13,9 @@
 <body>
   <nav class="light-blue darken-2" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo">Logo</a>
+      <a id="logo-container" href="index.html" class="brand-logo">
+        <img src="assets/logo.png" alt="">
+      </a>
       <ul class="right hide-on-med-and-down">
          <li><a href="reportar.html">Crear reporte</a></li>
         <li><a href="listado.html">Reportes</a></li>
