--- a/reporte.html
+++ b/reporte.html
@@ -82,7 +82,7 @@
         <h4 class="center">¿Tienes alguna información? </h24>
         <div class="row">
           <div class="input-field col s12">
-          <div class="fb-comments" data-href="" data-width="100%" data-numposts="5"></div>
+          <div class="fb-comments" data-href="http://shannonbit.dev/encuentrame/reporte.html?id=""" data-width="100%" data-numposts="10"></div>
           </div>
         </div>
       </form>
@@ -122,6 +122,12 @@
   var id = localStorage.getItem("reporte", id);
   getReportById(id);
 </script>
-
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.7&appId=314639532216992";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
