--- a/reportar.html
+++ b/reportar.html
@@ -29,9 +29,10 @@
     </div>
   </nav>
 
-  <div class="container">
-    <div class="section">
+  <div class="row">
+    <div class="container">
 
+   
       <form class="col s12" id="reporte" enctype="multipart/form-data">
         <div class="row">
           <div class="input-field col s4">
@@ -157,7 +158,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row center">
           <a hrer="javascript:void(0);" class="btn waves-effect waves-light" onCLick="dataParser()">Enviar
             <i class="material-icons right">send</i>
           </a>
