-Fix cards styles

--- a/reportar.html
+++ b/reportar.html
@@ -45,8 +45,8 @@
     </div>
   </nav>
 
-  <div class="row">
-    <div class="container">
+  <div class="container">
+    <div class="section">
 
    
       <form class="col s12" id="reporte" enctype="multipart/form-data">
@@ -211,7 +211,7 @@
 
 
   <script>
-  $(".datepicker").pickadate({labelMonthNext:"Mes siguiente",labelMonthPrev:"Mes anterior",labelMonthSelect:"Elige un mes",labelYearSelect:"Elige un año",monthsFull:["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octobre","Noviembre","Diciembre"],monthsShort:["Ene","Feb","Mar","Abr","May","Jun","Jul","Ago","Sep","Oct","Nov","Dic"],weekdaysFull:["Domingo","Lunes","Martes","Miercoles","Jueves","Viernes","Sabado"],weekdaysShort:["Dom","Lun","Mar","Mier","Jue","Vie","Sab"],weekdaysLetter:["D","L","M","M","J","V","S"],today:"Hoy",clear:"Borrar",close:"Cerrar",selectMonths:!0,selectYears:15});
+  $(".datepicker").pickadate({labelMonthNext:"Mes siguiente",labelMonthPrev:"Mes anterior",labelMonthSelect:"Elige un mes",labelYearSelect:"Elige un año",monthsFull:["01","02","03","04","05","06","07","08","09","10","11","12"],monthsShort:["Ene","Feb","Mar","Abr","May","Jun","Jul","Ago","Sep","Oct","Nov","Dic"],weekdaysFull:["Domingo","Lunes","Martes","Miercoles","Jueves","Viernes","Sabado"],weekdaysShort:["Dom","Lun","Mar","Mier","Jue","Vie","Sab"],weekdaysLetter:["D","L","M","M","J","V","S"],today:"Hoy",clear:"Borrar",close:"Cerrar", format: 'dd-mm-yyyy',selectMonths:!0,selectYears:15});
   </script>
 
 </body>
