--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="light-blue darken-2 " role="navigation">
+
+ <header>
+    <nav class="light-blue darken-2 " role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="index.html" class="brand-logo">
         <img src="assets/logo.png" alt="">
@@ -28,8 +30,10 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+ </header>
 
-  <div id="index-banner" class="parallax-container">
+  <main>
+    <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
@@ -101,6 +105,7 @@
       <div class="row">
         <div class="col s12 center">
           <h5>¿Qué hacer en caso de extravio o desaparición de personas?</h5>
+          <p>Mantener la calma y acudir inmediatamente a las autoridades correspondientes en caso de un menor de edad, Para personas mayores de edad intenta buscarla entre familiares y amigos</p>
         </div>
       </div>
     </div>
@@ -117,6 +122,7 @@
     </div>
     <div class="parallax"><img src="assets/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
+  </main>
 
   <footer class="page-footer teal">
     <div class="container">
