--- a/listado.html
+++ b/listado.html
@@ -11,7 +11,8 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="light-blue darken-2" role="navigation">
+  <header>
+    <nav class="light-blue darken-2" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="index.html" class="brand-logo">
         <img src="assets/logo.png" alt="">
@@ -28,22 +29,21 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+  </header>
 
-  <div class="row center">
-    <h3>¿LOS HAS VISTO?</h3>
-  </div>
+  <main>
+    <div class="row center">
+      <h3>¿LOS HAS VISTO?</h3>
+    </div>
 
   <div class="container" id="list-container">
     <div class="row">
-
       <div class="col s2 offset-s5">
         <img src="assets/preloader.gif" alt="" />
       </div>
-
     </div>
-
   </div>
-
+  </main>
 
   <footer class="page-footer teal">
     <div class="container">
